--- a/package.json
+++ b/package.json
@@ -1,19 +1,25 @@
 {
   "name": "@shuhei/rolling-window",
-  "version": "0.1.6",
+  "version": "0.2.0",
   "description": "A rolling time window",
-  "main": "index.js",
+  "main": "dist/index.js",
   "author": "Shuhei Kagawa <shuhei.kagawa@gmail.com>",
   "license": "MIT",
   "peerDependencies": {
     "hdr-histogram-js": "^1.0.0"
   },
   "devDependencies": {
+    "@types/jest": "^24.0.23",
+    "@types/node": "^12.12.17",
     "codecov": "^3.6.1",
     "hdr-histogram-js": "^1.1.4",
-    "jest": "^24.9.0"
+    "jest": "^24.9.0",
+    "prettier": "^1.19.1",
+    "ts-jest": "^24.2.0",
+    "typescript": "^3.7.3"
   },
   "scripts": {
+    "build": "tsc",
     "test": "jest",
     "tdd": "jest --watch",
     "ci": "jest --coverage && codecov"
