--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
   "devDependencies": {
     "@types/jest": "^24.0.23",
     "@types/node": "^12.12.17",
+    "@typescript-eslint/eslint-plugin": "^2.11.0",
+    "@typescript-eslint/parser": "^2.11.0",
     "codecov": "^3.6.1",
+    "eslint": "^6.7.2",
+    "eslint-config-prettier": "^6.7.0",
+    "eslint-plugin-prettier": "^3.1.1",
     "hdr-histogram-js": "^1.1.4",
     "jest": "^24.9.0",
     "prettier": "^1.19.1",
@@ -20,9 +25,11 @@
   },
   "scripts": {
     "build": "tsc",
+    "clean": "rm -rf dist",
     "test": "jest",
     "tdd": "jest --watch",
-    "ci": "jest --coverage && codecov"
+    "ci": "jest --coverage && codecov",
+    "lint": "tsc --noEmit && eslint . --ext .js,.ts"
   },
   "publishConfig": {
     "access": "public"
