Lint with eslint/recommended and eslint-plugin-jest

--- a/package.json
+++ b/package.json
@@ -6,6 +6,14 @@
   "license": "MIT",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "scripts": {
+    "build": "tsc --declaration",
+    "clean": "rm -rf dist",
+    "test": "jest",
+    "tdd": "jest --watch",
+    "ci": "jest --coverage && codecov",
+    "lint": "tsc --noEmit && eslint . --ext .js,.ts"
+  },
   "peerDependencies": {
     "hdr-histogram-js": "^1.0.0"
   },
@@ -17,20 +25,13 @@
     "codecov": "^3.6.1",
     "eslint": "^6.7.2",
     "eslint-config-prettier": "^6.7.0",
+    "eslint-plugin-jest": "^23.6.0",
     "eslint-plugin-prettier": "^3.1.1",
     "hdr-histogram-js": "^1.1.4",
     "jest": "^24.9.0",
     "prettier": "^1.19.1",
     "ts-jest": "^24.2.0",
     "typescript": "^3.7.3"
-  },
-  "scripts": {
-    "build": "tsc --declaration",
-    "clean": "rm -rf dist",
-    "test": "jest",
-    "tdd": "jest --watch",
-    "ci": "jest --coverage && codecov",
-    "lint": "tsc --noEmit && eslint . --ext .js,.ts"
   },
   "publishConfig": {
     "access": "public"
