--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "clean": "rm -rf dist",
     "test": "jest",
     "tdd": "jest --watch",
-    "ci": "jest --coverage && codecov",
+    "ci": "jest --coverage",
     "lint": "tsc --noEmit && eslint . --ext .js,.ts"
   },
   "peerDependencies": {
