--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "test": "jest",
     "tdd": "jest --watch",
     "ci": "jest --coverage",
-    "lint": "tsc --noEmit && eslint . --ext .js,.ts"
+    "format": "prettier --write '**/*.{js,ts,yml,yaml,json}'",
+    "lint": "prettier -l '**/*.{js,ts,yml,yaml,json}' && tsc --noEmit && eslint . --ext .js,.ts"
   },
   "peerDependencies": {
     "hdr-histogram-js": "^1.0.0"
